src/test/ui/nll/user-annotations/method-ufcs-3.stderr
error[E0597]: `c` does not live long enough
  --> $DIR/method-ufcs-3.rs:36:53
   |
LL |     <_ as Bazoom<_>>::method::<&'static u32>(&a, b, &c);
   |     ----------------------------------------        ^^ borrowed value does not live long enough
   |     |
   |     type annotation requires that `c` is borrowed for `'static`
LL | }
   | - `c` dropped here while still borrowed
   |
help: you can remove unnecessary lifetime annotations here
  --> $DIR/method-ufcs-3.rs:36:5
   |
LL |     <_ as Bazoom<_>>::method::<&'static u32>(&a, b, &c);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0597]: `c` does not live long enough
  --> $DIR/method-ufcs-3.rs:43:48
   |
LL | fn annot_reference_named_lifetime<'a>(_d: &'a u32) {
   |                                   -- lifetime `'a` defined here
...
LL |     <_ as Bazoom<_>>::method::<&'a u32>(&a, b, &c);
   |     -----------------------------------        ^^ borrowed value does not live long enough
   |     |
   |     type annotation requires that `c` is borrowed for `'a`
LL | }
   | - `c` dropped here while still borrowed
   |
help: you can remove unnecessary lifetime annotations here
  --> $DIR/method-ufcs-3.rs:43:5
   |
LL |     <_ as Bazoom<_>>::method::<&'a u32>(&a, b, &c);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0597]: `c` does not live long enough
  --> $DIR/method-ufcs-3.rs:57:52
   |
LL | fn annot_reference_named_lifetime_in_closure<'a>(_: &'a u32) {
   |                                              -- lifetime `'a` defined here
...
LL |     let _closure = || {
   |                     - `c` dropped here while still borrowed
LL |         let c = 66;
LL |         <_ as Bazoom<_>>::method::<&'a u32>(&a, b, &c);
   |         -----------------------------------        ^^ borrowed value does not live long enough
   |         |
   |         type annotation requires that `c` is borrowed for `'a`
   |
help: you can remove unnecessary lifetime annotations here
  --> $DIR/method-ufcs-3.rs:57:9
   |
LL |         <_ as Bazoom<_>>::method::<&'a u32>(&a, b, &c);
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0597`.
